fixed scrollbar color for light mode

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -353,13 +353,13 @@ footer {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #fff3;
+    background: color-mix(in srgb, var(--text-color) 40%, transparent);
     border-radius: 5px;
     transition: all 0.3s;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #fff8;
+    background: color-mix(in srgb, var(--text-color) 75%, transparent);
 }
 
 /*              */
